--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>auto-services-Annamax</title>
+    <!-- FAVICON  -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon(32).png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/favicon(180).png">
+    <link rel="icon" sizes="16x16" href="./favicon/favicon(16).png">
+    <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
