did section benefits

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>auto-services-Annamax</title>
+    <title>турбо-авто-сервіс</title>
     <!-- FAVICON  -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon(32).png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/favicon(180).png">
-    <link rel="icon" sizes="16x16" href="./favicon/favicon(16).png">
-    <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon(32).png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/favicon(180).png"
+    />
+    <link rel="icon" sizes="16x16" href="./favicon/favicon(16).png" />
+    <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -26,102 +35,93 @@
   </head>
   <body>
     <header class="header">
-    <div class="container header-container">
+      <div class="container header-container">
         <nav class="nav">
-        <ul class="list nav-list">
-          <li><a href="" class="link">Переваги</a></li>
-          <li><a href="" class="link">Наші клієнти (партнери)</a></li>
-          <li><a href="" class="link">Про нас</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <ul class="list nav-list">
+            <li><a href="" class="link">Переваги</a></li>
+            <li><a href="" class="link">Наші клієнти (партнери)</a></li>
+            <li><a href="" class="link">Про нас</a></li>
+            <li><a href="" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <a href="" class="link">Logo</a>
+        <ul class="list list-communication">
+          <li><a href="" class="link">+1(111)-111-11-11</a></li>
+          <li><a href="" class="link">gmail@annamax.com.ua</a></li>
         </ul>
-            </nav>
-              <a href="" class="link">Logo</a>
-      <ul class="list list-communication">
-        <li><a href="" class="link">+1(111)-111-11-11</a></li>
-        <li><a href="" class="link">gmail@annamax.com.ua</a></li>
-      </ul>
-  <button type="button" class="button mobile-button">
-        <span></span>
-  </button>
-    </div>
+        <button type="button" class="button mobile-button">
+          <span></span>
+        </button>
+      </div>
     </header>
     <main>
       <section class="hero">
         <div class="container">
-          <h1>Основний заголовок</h1>
-          <img
+          <h1 class="hero-title">
+            Більше ніж автосервіс!
+            <span class="after-title"
+              >Якісне обладнання, професіонали авторемонту, індивідуальний
+              підхід до кожного клієнта.</span
+            >
+          </h1>
+          <!-- <img
             src="./images/2048x2048.jpg"
             alt="фонове зображення"
             width="100"
             height="100"
-          />
-          <p>Опис основний</p>
-          <button type="button">кнопка</button>
+          /> -->
+          <button type="button" class="button hero-button">Кнопка герой</button>
         </div>
       </section>
       <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="list">
+          <ul class="list list-benefits">
             <li>
-              <a href="" class="link">
-                <figure>
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="якісне виконання роботи"
-                    width="100"
-                    height="100"
-                  />
-                  <figcaption>
-                    не тільки професійно а й доступно виконуємо замовлення
-                  </figcaption>
-                </figure>
-              </a>
+              <div class="img-text">
+                <img
+                  src="./images/2048x2048.jpg"
+                  alt="якісне виконання роботи"
+                  width="450"
+                  height="450"
+                  class="benefits-img"
+                />
+                <p class="benefits-text">
+                  Професіоналізм компанії: Кваліфіковані спеціалісти завжди
+                  готові надати якісні послуги нашим клієнтам з гарантією;
+                </p>
+              </div>
             </li>
             <li>
-              <a href="" class="link">
-                <figure>
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="якісне виконання роботи"
-                    width="100"
-                    height="100"
-                  />
-                  <figcaption>
-                    не тільки професійно а й доступно виконуємо замовлення
-                  </figcaption>
-                </figure>
-              </a>
+              <div class="img-text">
+                <img
+                  src="./images/2048x2048.jpg"
+                  alt="якісне виконання роботи"
+                  width="450"
+                  height="450"
+                  class="benefits-img"
+                />
+                <p class="benefits-text">
+                  Швидка підтримка: Кожного дня в нас працює контакт-центр для
+                  консультації та записів наших клієнтів;
+                </p>
+              </div>
             </li>
             <li>
-              <a href="" class="link">
-                <figure>
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="якісне виконання роботи"
-                    width="100"
-                    height="100"
-                  />
-                  <figcaption>
-                    не тільки професійно а й доступно виконуємо замовлення
-                  </figcaption>
-                </figure>
-              </a>
-            </li>
-            <li>
-              <a href="" class="link">
-                <figure>
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="якісне виконання роботи"
-                    width="100"
-                    height="100"
-                  />
-                  <figcaption>
-                    не тільки професійно а й доступно виконуємо замовлення
-                  </figcaption>
-                </figure>
-              </a>
+              <div class="img-text">
+                <img
+                  src="./images/2048x2048.jpg"
+                  alt="якісне виконання роботи"
+                  width="450"
+                  height="450"
+                  class="benefits-img"
+                />
+                <p class="benefits-text">
+                  Швидкість виконання: Ми прагнемо оптимізувати процес
+                  покращення Вашого авто і прагнемо надати послуги не тільки
+                  високоякісно, але й швидко.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
