--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
             </a>
           </li>
         </ul>
-       
-        <button type="button" class="mobile-button menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+
+        <button
+          type="button"
+          class="mobile-button menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
           <span></span>
         </button>
       </div>
@@ -239,7 +244,9 @@
       <section class="connection-form">
         <div class="container">
           <form class="personal-data" autocomplete="on" name="connection_form">
-            <strong class="title title-form">Виникли питання? Залиште свої дані</strong>
+            <strong class="title title-form"
+              >Виникли питання? Залиште свої дані</strong
+            >
             <label class="form-field">
               <span class="label-form">Ім'я</span>
               <input
@@ -251,10 +258,17 @@
                 title="Введіть не менше 2-х символів"
                 class="form-input"
               />
-              </label>
+            </label>
             <label class="form-field">
               <span class="label-form">Телефон</span>
-              <input type="tel" name="tel" required  placeholder="+38(___)___-__-__" pattern="^(\+38\(0\d{2}\)\d{3}-\d{2}-\d{2})$" class="form-input"/></label>
+              <input
+                type="tel"
+                name="tel"
+                required
+                placeholder="+38(___)___-__-__"
+                pattern="^(\+38\(0\d{2}\)\d{3}-\d{2}-\d{2})$"
+                class="form-input"
+            /></label>
             <button type="submit" class="button button-form">Відправити</button>
           </form>
         </div>
@@ -262,47 +276,74 @@
       <section class="our-customers">
         <div class="container">
           <h2 class="title">Наші клієнти</h2>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="list customers-list">
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="4978">4978+</p>
+              <h3 class="customers-subtitle">Задоволених клієнтів</h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="20967">20967+</p>
+              <h3 class="customers-subtitle">
+                Кількість відремонтованих автомобілів
+              </h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="53">53+</p>
+              <h3 class="customers-subtitle">Кількість робіт кожного дня</h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="118">118+</p>
+              <h3 class="customers-subtitle">
+                К-сть клієнтів, які нас рекомендують
+              </h3>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer></footer>
- <!-- МОБІЛЬНЕ МЕНЮ  -->
-     <div class="menu-container js-menu-container" id="mobile-menu">
+    <!-- МОБІЛЬНЕ МЕНЮ  -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
-       <svg width="20" height="20">
-        <use href="./images/sprite.svg#mobile-close"></use>
-       </svg>
+        <svg width="20" height="20">
+          <use href="./images/sprite.svg#mobile-close"></use>
+        </svg>
       </button>
 
       <ul class="mobile-menu">
-        <li class="mobile-menu-item"><a href="" class="link mobile-menu-link">Переваги</a></li>
-        <li class="mobile-menu-item"><a href="" class="link mobile-menu-link">Наші клієнти</a></li>
-        <li class="mobile-menu-item"><a href="" class="link mobile-menu-link">Наші працівники</a></li>
-        <li class="mobile-menu-item"><a href="" class="link mobile-menu-link">Про нас</a></li>
-        <li class="mobile-menu-item"><a href="" class="link mobile-menu-link">Контакти</a></li>
-        
+        <li class="mobile-menu-item">
+          <a href="" class="link mobile-menu-link">Переваги</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="link mobile-menu-link">Наші клієнти</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="link mobile-menu-link">Наші працівники</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="link mobile-menu-link">Про нас</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="link mobile-menu-link">Контакти</a>
+        </li>
       </ul>
     </div>
-      <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-<script src="./js/mobile-menu.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./js/jquery.inputmask.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('input[name="tel"]').inputmask("+38(999)999-99-99");
-    });
-  </script> <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/mobile-menu.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./js/jquery.inputmask.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('input[name="tel"]').inputmask("+38(999)999-99-99");
+      });
+    </script>
+    <script src="./js/our-customers.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
   </body>
 </html>
