did footer, about-us

--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
           <ul class="list nav-list">
             <li><a href="" class="link">Переваги</a></li>
             <li><a href="" class="link">Наші клієнти</a></li>
+            <li><a href="" class="link">Наші працівники</a></li>
             <li><a href="" class="link">Про нас</a></li>
             <li><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
-        <a href="" class="link">Logo</a>
+        <a href="" class="link link-logo">Logo</a>
         <ul class="list list-communication">
           <li><a href="" class="link">+1(111)-111-11-11</a></li>
           <li>
@@ -87,6 +88,7 @@
           <a href="" class="link link-hero">Форма захвату</a>
         </div>
       </section>
+      <!-- ПЕРЕВАГИ  -->
       <section class="benefits">
         <div class="container">
           <h2 class="title">Наші переваги</h2>
@@ -102,7 +104,7 @@
                 />
                 <p class="benefits-text">
                   Професіоналізм компанії: Кваліфіковані спеціалісти завжди
-                  готові надати якісні послуги нашим клієнтам з гарантією;
+                  готові надати якісні послуги нашим клієнтам з гарантією.
                 </p>
               </div>
             </li>
@@ -117,7 +119,7 @@
                 />
                 <p class="benefits-text">
                   Швидка підтримка: Кожного дня в нас працює контакт-центр для
-                  консультації та записів наших клієнтів;
+                  консультації та записів наших клієнтів.
                 </p>
               </div>
             </li>
@@ -141,6 +143,35 @@
           <button type="button" class="button">Кнопка наші переваги</button>
         </div>
       </section>
+      <!-- НАШІ КЛІЄНТИ  -->
+      <section class="our-customers">
+        <div class="container">
+          <h2 class="title">Наші клієнти</h2>
+          <ul class="list customers-list">
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="4978">4978+</p>
+              <h3 class="customers-subtitle">Задоволених клієнтів</h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="20967">20967+</p>
+              <h3 class="customers-subtitle">
+                Кількість відремонтованих автомобілів
+              </h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="53">53+</p>
+              <h3 class="customers-subtitle">Кількість робіт кожного дня</h3>
+            </li>
+            <li class="customers-item">
+              <p class="customers-quantity" data-target="118">118+</p>
+              <h3 class="customers-subtitle">
+                К-сть клієнтів, які нас рекомендують
+              </h3>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- НАШІ ПРАЦІВНИКИ  -->
       <section class="our-employees">
         <div class="container">
           <h2 class="title">Наші кращі працівники</h2>
@@ -241,6 +272,39 @@
           <button type="button" class="button">Кнопка наші працівники</button>
         </div>
       </section>
+      <!-- ПРО НАС  -->
+      <section class="about-us">
+        <div class="container">
+          <h2 class="title">Про нас-контакти</h2>
+          <p class="about-description">
+            Детейлінг центр “назва” - лідер у сфері ремонтних та детейлінгових
+            послуг для вашого авто. Наші професіонали надають детальну
+            консультацію по догляду за автомобілем та усунення естетичних
+            недоліків. Досвідчені майстри допомагають підтримувати технічну та
+            візуальну складову авто наших клієнтів у відмінному стані не тільки
+            зовнішньо, але й внутрішньо. Чому обирають саме нашу студію? Ми
+            віримо в якісний догляд за вашим авто! Захоплення автомобілями для
+            нас — це не просто робота, а справжня пристрасть, тому ми досконало
+            знаємо, як забезпечити найкращий сервіс. Дотримання термінів — наш
+            пріоритет, і завдяки системі попереднього запису ви завжди отримуєте
+            своє авто вчасно. Ми приділяємо увагу кожній дрібниці, викладаємося
+            на всі 110% і робимо все, щоб ваш автомобіль виглядав бездоганно.
+          </p>
+          <p class="text-head">
+            Контакт керівника:
+            <a href="mailto:@serhii_khrystoiev" class="link-head"
+              >@serhii_khrystoiev</a
+            >
+          </p>
+          <img
+            src="./images/глайсдорф.png"
+            alt="місце розташування"
+            width="450px"
+            height="248"
+          />
+        </div>
+      </section>
+      <!-- ФОРМА  -->
       <section class="connection-form">
         <div class="container">
           <form class="personal-data" autocomplete="on" name="connection_form">
@@ -273,35 +337,16 @@
           </form>
         </div>
       </section>
-      <section class="our-customers">
-        <div class="container">
-          <h2 class="title">Наші клієнти</h2>
-          <ul class="list customers-list">
-            <li class="customers-item">
-              <p class="customers-quantity" data-target="4978">4978+</p>
-              <h3 class="customers-subtitle">Задоволених клієнтів</h3>
-            </li>
-            <li class="customers-item">
-              <p class="customers-quantity" data-target="20967">20967+</p>
-              <h3 class="customers-subtitle">
-                Кількість відремонтованих автомобілів
-              </h3>
-            </li>
-            <li class="customers-item">
-              <p class="customers-quantity" data-target="53">53+</p>
-              <h3 class="customers-subtitle">Кількість робіт кожного дня</h3>
-            </li>
-            <li class="customers-item">
-              <p class="customers-quantity" data-target="118">118+</p>
-              <h3 class="customers-subtitle">
-                К-сть клієнтів, які нас рекомендують
-              </h3>
-            </li>
-          </ul>
-        </div>
-      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <a href="" class="link link-logo logo-footer">Logo</a>
+        <p class="copyright">
+          &#169;Всі права захищені.
+          <a href="./politic-confidential.html" class="index-confidential">Політика конфіденційності</a>
+        </p>
+      </div>
+    </footer>
     <!-- МОБІЛЬНЕ МЕНЮ  -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
